--- a/ev3a_example.cfg
+++ b/ev3a_example.cfg
@@ -9,8 +9,8 @@ EV3:
   maxLimit:  1.0
   startCity: 1
   learningRate: 3.0
-  cityCoordinat: coordinat.out
-  weightData: weight5.out 
+  cityCoordinat: Coordinates/coordinat5.out
+  weightData: DistanceTable/weight5.out 
   
 
   
